traces/bug_442.txt
examples++-load/Element_P3.cpp:446: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/Element_P3.cpp:446:1: initialization of callDoLoadInit
444.   
445.   } // FEM2d namespace 
446. > LOADFUNC(Fem2D::init);
447.   
448.   // --- fin -- 

examples++-load/Element_P3.cpp:446:1: call to DoLoadInit
444.   
445.   } // FEM2d namespace 
446. > LOADFUNC(Fem2D::init);
447.   
448.   // --- fin -- 

examples++-load/Element_P3.cpp:446:1: call to addInitFunct
  444.   
  445.   } // FEM2d namespace 
  446. > LOADFUNC(Fem2D::init);
  447.   
  448.   // --- fin -- 

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
